--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
                             <img class="img-fluid" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400" src="images/desktop/s2-pic3.png" alt="">
                         </div>
                         <div class="col-12">
-                            <img class="img-fluid" data-aos="fade-right" data-aos-duration="800" data-aos-delay="600" src="images/desktop/s2-chart.png" alt="">
+                            <img class="img-fluid" data-aos="fade-right" data-aos-duration="800" src="images/desktop/s2-chart.png" alt="">
                         </div>
                     </div>
                 </div>
