--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="row justify-content-between align-items-center">
                     <div class="col-4">
                         <a class="navbar-brand" href="index.html">
-                            <img class="img-fluid" src="/images/common/logo.png" class="logo">
+                            <img class="img-fluid" src="images/common/logo.png" class="logo">
                         </a>
                     </div>
                     <div class="col-8 text-right">
@@ -77,7 +77,7 @@
             <div class="d-xl-none d-sm-block">
                 <nav class="navbar navbar-expand-xl navbar-light px-0">
                     <a class="navbar-brand ml-3" href="index.html">
-                        <img class="img-fluid" src="/images/common/logo.png" class="logo" style="max-width: 150px;">
+                        <img class="img-fluid" src="images/common/logo.png" class="logo" style="max-width: 150px;">
                     </a>
                     <button class="navbar-toggler border-0 mr-3" type="button" data-toggle="collapse" data-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
