--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
         </div>
 
 <!--        <div class="pop position-fixed">-->
-        <div class="pop">
+        <div class="pop d-none d-xl-block">
             <a class="btn-anchor" href="#job"><img src="images/common/btn-join.png" class="img-fluid"></a>
         </div>
 
