--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-7 ml-auto">
-                            <div class="kv-title" data-aos="fade-up" data-aos-duration="800">
-                                <img class="img-fluid animate-fade" src="images/desktop/kv-title-glow.png" alt="微觀世界 科技之眼">
+                            <div class="">
+                                <img class="img-fluid" data-aos="fade-up-right" data-aos-duration="800" src="images/desktop/kv-title.png" alt="微觀世界 科技之眼">
                             </div>
                             <div class="slogan pl-8">
                                 <img class="img-fluid" data-aos="fade-left" data-aos-duration="800" src="images/desktop/slogan.png" alt="">
@@ -626,6 +626,9 @@
             </div>
             <div class="d-xl-none d-sm-block">
                 <img class="img-fluid" src="images/mobile/s1-content.jpg" alt="">
+                <div class="text-center px-6" id="job-m">
+                    <img class="img-fluid" src="images/common/s2-title.png" alt="">
+                </div>
                 <div class="container py-10">
                     <div class="tab1 px-3">
                         <img class="img-fluid" src="images/common/s2-tab1.png" alt="工程製造">
@@ -796,15 +799,18 @@
         </div>
 
         <div id="s3">
-            <a href="#job" class="btn-anchor">
-                <img class="img-fluid d-none d-xl-block" src="images/desktop/s3-content.jpg" alt="立即應徵">
-                <img class="img-fluid d-xl-none d-sm-block" src="images/mobile/s3-content.jpg" alt="立即應徵">
+            <a href="#job" class="btn-anchor d-none d-xl-block">
+                <img class="img-fluid" src="images/desktop/s3-content.jpg" alt="立即應徵">
+            </a>
+            <a href="#job-m" class="btn-anchor d-xl-none d-sm-block">
+                <img class="img-fluid" src="images/mobile/s3-content.jpg" alt="立即應徵">
             </a>
         </div>
 
 <!--        <div class="pop position-fixed">-->
         <div class="pop" style="display: none;">
-            <a class="btn-anchor" href="#job"><img src="images/common/btn-join.png" class="img-fluid"></a>
+            <a class="btn-anchor d-none d-xl-block" href="#job"><img src="images/common/btn-join.png" class="img-fluid"></a>
+            <a class="btn-anchor d-xl-none d-sm-block" href="#job-m"><img src="images/common/btn-join.png" class="img-fluid"></a>
         </div>
 
         <!-- ./content -->
