--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/custom.css">
-        <title>漢民微測科技招募計畫</title>
+        <title>微觀世界，科技之眼</title>
         <!--[if lte IE 9]>
           <link href="css/animations-ie-fix.css" rel="stylesheet">
         <![endif]-->
@@ -120,11 +120,20 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-7 ml-auto">
+<!--                            <div class="kv-title" data-aos="fade-up" data-aos-duration="800">-->
+                            <div class="kv-title">
+                                <div class="animate-delay">
+                                    <img class="img-fluid animate-fade" src="images/desktop/kv-title-glow.png" alt="微觀世界 科技之眼">
+                                </div>
+                            </div>
+<!--
                             <div class="">
                                 <img class="img-fluid" data-aos="fade-up-right" data-aos-duration="800" src="images/desktop/kv-title.png" alt="微觀世界 科技之眼">
                             </div>
+-->
                             <div class="slogan pl-8">
-                                <img class="img-fluid" data-aos="fade-left" data-aos-duration="800" src="images/desktop/slogan.png" alt="">
+<!--                                <img class="img-fluid" data-aos="fade-left" data-aos-duration="800" src="images/desktop/slogan.png" alt="">-->
+                                <img class="img-fluid" src="images/desktop/slogan.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -452,7 +461,7 @@
                 </ol>
             </div>
             <div class="d-flex mt-10">
-                <a href="https://www.104.com.tw/job/?jobno=55c70" class="btn btn-primary btn-rounded py-3 js-monitor-params" target="_blank">立即<br>應徵</a>
+                <a href="https://www.104.com.tw/job/?jobno=557c0" class="btn btn-primary btn-rounded py-3 js-monitor-params" target="_blank">立即<br>應徵</a>
             </div>
         </div>
     </div>
@@ -819,8 +828,8 @@
             <div class="container py-3">
                 <span style="font:12px Arial;color:#333;letter-spacing:1px;line-height:22px;">上述內容由 漢民微測科技股份有限公司 提供，104整合招募服務處代為維護管理<br />
                 以上所提及之各公司與產品均分屬各相關公司與個別擁有者之商標<br />
-                意見反應：02-29126104#8777 <a href="http://www.104.com.tw/cfdocs/question_admin/user/reaction.cfm" target="_blank"><img src="http://www.104.com.tw/cfdocs/edm/mutual_img/edm_mail_im_01.gif" border="0" align="absmiddle"/></a><br />
-                本網站內容享有著作權，禁止侵害，違者必究。&copy; 2001-2016 104 Corporation All Rights Reserved </span>
+                意見反應：02-29126104#8163 <a href="http://www.104.com.tw/cfdocs/question_admin/user/reaction.cfm" target="_blank"><img src="http://www.104.com.tw/cfdocs/edm/mutual_img/edm_mail_im_01.gif" border="0" align="absmiddle"/></a><br />
+                本網站內容享有著作權，禁止侵害，違者必究。&copy; 2001-2018 104 Corporation All Rights Reserved </span>
             </div>
         </div>
         <script src="js/vendor/jquery-3.3.1.min.js"></script>
