--- a/index.html
+++ b/index.html
@@ -798,10 +798,31 @@
                         <div class="col">
                             <img class="img-fluid" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400" src="images/desktop/s2-pic3.png" alt="">
                         </div>
+                        <!-- 一次進場 -->
+<!--
                         <div class="col-12">
                             <img class="img-fluid" data-aos="fade-right" data-aos-duration="800" src="images/desktop/s2-chart.png" alt="">
                         </div>
+-->
                     </div>
+
+                    <!-- 分次進場 -->
+                    <table class="table table-borderless">
+                        <tbody>
+                            <tr>
+                                <td class="p-0" data-aos="fade-right" data-aos-duration="800">
+                                    <img class="img-fluid" src="images/desktop/s2-chart1.png" alt="">
+                                </td>
+                                <td class="p-0" data-aos="fade-right" data-aos-duration="700" data-aos-delay="200">
+                                    <img class="img-fluid" src="images/desktop/s2-chart2.png" alt="">
+                                </td>
+                                <td class="p-0" data-aos="fade-right" data-aos-duration="750" data-aos-delay="400">
+                                    <img class="img-fluid" src="images/desktop/s2-chart3.png" alt="">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
                 </div>
             </div>
             <img class="img-fluid d-xl-none d-sm-block" src="images/mobile/s2-content.jpg" alt="">
