--- a/inpage3.html
+++ b/inpage3.html
@@ -177,7 +177,7 @@
 
         <!-- Mobile -->
         <div id="mobile" class="d-xl-none d-sm-block">
-            <div class="row">
+            <div class="row text-center">
                 <div class="col-12 kv">
                     <img class="img-fluid" src="images/inpage3/kv-mobile.jpg" alt="">
                 </div>
