--- a/inpage3.html
+++ b/inpage3.html
@@ -136,7 +136,7 @@
                         <img class="img-fluid mt-10" data-aos="fade-left" data-aos-duration="800" data-aos-delay="300" src="images/inpage3/a1.png" alt="">
                     </div>
                     <div class="col-12">
-                        <img class="img-fluid pic" data-aos="zoom-out" data-aos-duration="800" src="images/inpage3/pic1-desktop.png" alt="">
+                        <img class="img-fluid pic" data-aos="zoom-out" data-aos-duration="800" data-aos-delay="600" src="images/inpage3/pic1-desktop.png" alt="">
                     </div>
                 </div>
                 <div class="row no-gutters s2 mb-2">
