--- a/inpage1.html
+++ b/inpage1.html
@@ -131,7 +131,7 @@
                         <div id="player"></div>
                     </div>
                     <div class="video-content">
-                        <a href="" data-toggle="modal" data-target=".modal-video" data-theVideo="https://www.youtube.com/embed/kOgcGFOw5es">
+                        <a href="" data-toggle="modal" data-target=".modal-video" data-theVideo="https://www.youtube.com/embed/H2bRwB5nG6Y">
                             <img class="img-fluid" src="images/inpage1/title.png" alt="">
                         </a>
                     </div>
@@ -229,12 +229,12 @@
               player = new YT.Player('player', {
                 height: '100%',
                 width: '100%',
-                videoId: 'zGDzdps75ns',
+                videoId: 'H2bRwB5nG6Y',
                 playerVars: { 'autoplay': 1, 'controls': 0, 'rel': 0, 'hd': 1, 'modestbranding': 1, 'loop': 1, 'showinfo':0, 'autohide': 1, 'disablekb': 1, 'wmode': 'opaque' },
                 events: {
                   'onReady': onPlayerReady,
                   'onStateChange': function(e){
-                    var id = 'zGDzdps75ns';
+                    var id = 'H2bRwB5nG6Y';
                     if(e.data === YT.PlayerState.ENDED){
                       player.loadVideoById(id);
                     }
