--- a/inpage1.html
+++ b/inpage1.html
@@ -184,8 +184,8 @@
 
 <!--        <div class="pop position-fixed">-->
         <div class="pop" style="display: none;">
-            <a class="btn-anchor d-none d-xl-block" href="#job"><img src="images/common/btn-join.png" class="img-fluid"></a>
-            <a class="btn-anchor d-xl-none d-sm-block" href="#job-m"><img src="images/common/btn-join.png" class="img-fluid"></a>
+            <a class="btn-anchor d-none d-xl-block" href="index.html#job"><img src="images/common/btn-join.png" class="img-fluid"></a>
+            <a class="btn-anchor d-xl-none d-sm-block" href="index.html#job-m"><img src="images/common/btn-join.png" class="img-fluid"></a>
         </div>
 
         <!-- ./content -->
