--- a/inpage2.html
+++ b/inpage2.html
@@ -138,24 +138,28 @@
                     <img class="img-fluid" data-aos="fade-left" data-aos-duration="800" src="images/inpage2/s3-pic.png" alt="">
                 </div>
             </div>
-            <div class="row align-items-end join">
-                <div class="col-12">
-                    <img class="img-fluid slogan" data-aos="zoom-in" data-aos-duration="800" src="images/inpage2/slogan-desktop.jpg" alt="">
+            <div class="join">
+                <div class="row align-items-end justify-content-center">
+                    <div class="col-12">
+                        <img class="img-fluid slogan" data-aos="zoom-in" data-aos-duration="800" src="images/inpage2/slogan-desktop.jpg" alt="">
+                    </div>
+                    <div class="col-4 text-right">
+                        <img class="img-fluid pic mr-8" data-aos="fade-down-right" data-aos-duration="800" src="images/inpage2/join-pic1.png" alt="">
+                    </div>
+                    <div class="col-4">
+                        <img class="img-fluid pic" data-aos="fade-down-left" data-aos-duration="800" data-aos-delay="300" src="images/inpage2/join-pic2.png" alt="">
+                    </div>
                 </div>
-                <div class="col-6 text-right">
-                    <img class="img-fluid mr-8" data-aos="fade-down-right" data-aos-duration="800" src="images/inpage2/join-pic1.png" alt="">
-                </div>
-                <div class="col-6">
-                    <img class="img-fluid" data-aos="fade-down-left" data-aos-duration="800" data-aos-delay="300" src="images/inpage2/join-pic2.png" alt="">
-                </div>
-                <div class="col-6 mt-4 text-right">
-                    <img class="img-fluid" data-aos="fade-up-right" data-aos-duration="800" data-aos-delay="600" src="images/inpage2/join-pic3.png" alt="">
-                </div>
-                <div class="col-6 mt-4">
-                    <img class="img-fluid mr-8" data-aos="fade-down-left" data-aos-duration="800" data-aos-delay="900" src="images/inpage2/join-pic4.png" alt="">
-                </div>
-                <div class="join-cta d-flex">
-                    <img class="img-fluid mx-auto" src="images/inpage2/join-cta.png" alt="">
+                <div class="row align-items-end justify-content-center">
+                    <div class="col-4 mt-4 text-right">
+                        <img class="img-fluid pic" data-aos="fade-up-right" data-aos-duration="800" data-aos-delay="600" src="images/inpage2/join-pic3.png" alt="">
+                    </div>
+                    <div class="col-4 mt-4">
+                        <img class="img-fluid mr-8 pic" data-aos="fade-down-left" data-aos-duration="800" data-aos-delay="900" src="images/inpage2/join-pic4.png" alt="">
+                    </div>
+                    <div class="join-cta d-flex">
+                        <img class="img-fluid mx-auto" src="images/inpage2/join-cta.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -185,8 +189,8 @@
 
 <!--        <div class="pop position-fixed">-->
         <div class="pop" style="display: none;">
-            <a class="btn-anchor d-none d-xl-block" href="#job"><img src="images/common/btn-join.png" class="img-fluid"></a>
-            <a class="btn-anchor d-xl-none d-sm-block" href="#job-m"><img src="images/common/btn-join.png" class="img-fluid"></a>
+            <a class="btn-anchor d-none d-xl-block" href="index.html#job"><img src="images/common/btn-join.png" class="img-fluid"></a>
+            <a class="btn-anchor d-xl-none d-sm-block" href="index.html#job-m"><img src="images/common/btn-join.png" class="img-fluid"></a>
         </div>
 
         <!-- ./content -->
