--- a/inpage2.html
+++ b/inpage2.html
@@ -122,7 +122,11 @@
 
         <!-- Desktop -->
         <div id="desktop" class="d-none d-xl-block">
-
+            <div class="row no-gutters align-items-center kv">
+                <div class="col-12">
+                    <img class="img-fluid" src="images/inpage2/kv.png" alt="">
+                </div>
+            </div>
             <div class="row no-gutters align-items-center s1">
                 <div class="col-12">
                     <img class="img-fluid" data-aos="fade-left" data-aos-duration="800" src="images/inpage2/s1-pic.png" alt="">
