--- a/inpage2.html
+++ b/inpage2.html
@@ -161,8 +161,10 @@
                     <div class="col-4 mt-4">
                         <img class="img-fluid mr-8 pic" data-aos="fade-down-left" data-aos-duration="800" data-aos-delay="900" src="images/inpage2/join-pic4.png" alt="">
                     </div>
+                    <a class="join-cta d-flex btn-cta d-none d-xl-block" href="index.html#job"></a>
+                    <a class="join-cta d-flex btn-cta d-xl-none d-sm-block" href="index.html#job-m"></a>
                     <div class="join-cta d-flex">
-                        <img class="img-fluid mx-auto" src="images/inpage2/join-cta.png" alt="">
+                        <img class="img-fluid mx-auto" data-aos="zoom-in" data-aos-duration="800" src="images/inpage2/join-cta.png" alt="">
                     </div>
                 </div>
             </div>
