--- a/inpage1.html
+++ b/inpage1.html
@@ -166,7 +166,9 @@
             <div class="row">
                 <div class="col-12 py-10 kv">
                     <div class="py-10 px-6 kv-title">
-                        <img class="img-fluid" src="images/inpage1/title.png" alt="">
+                        <a href="" data-toggle="modal" data-target=".modal-video" data-theVideo="https://www.youtube.com/embed/H2bRwB5nG6Y">
+                            <img class="img-fluid" src="images/inpage1/title.png" alt="">
+                        </a>
                     </div>
                 </div>
                 <div class="col-12 mt-6">
